RESOLVED FIXED40832
[GTK] The url passed to the WebView during layout tests is invalid
https://bugs.webkit.org/show_bug.cgi?id=40832
Summary [GTK] The url passed to the WebView during layout tests is invalid
Martin Robinson
Reported 2010-06-18 07:59:53 PDT
Instead of passing file:///full/url/to/test.html DumpRenderTree passes file://relative/path/to/file.html.
Attachments
Patch for this issue + a small cleanup (5.96 KB, patch)
2010-06-18 09:07 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2010-06-18 08:01:08 PDT
Further information: While the page loads fine, accessing the URI either via webkit_web_view_get_uri or webkit_web_frame_get_uri returns the original malformed URL.
Martin Robinson
Comment 2 2010-06-18 09:07:33 PDT
Created attachment 59118 [details] Patch for this issue + a small cleanup
Xan Lopez
Comment 3 2010-06-24 13:40:32 PDT
Comment on attachment 59118 [details] Patch for this issue + a small cleanup >- bool isSVGW3CTest = (gLayoutTestController->testPathOrURL().find("svg/W3C-SVG-1.1") != string::npos); >+ bool isSVGW3CTest = (testURL.find("svg/W3C-SVG-1.1") != string::npos); No need for that parenthesis.
Martin Robinson
Comment 4 2010-06-24 15:07:53 PDT
Note You need to log in before you can comment on or make changes to this bug.